--- a/app/styles/app.styl
+++ b/app/styles/app.styl
@@ -2413,6 +2413,11 @@ ul.list
         grid-area calculator
     &__text
         margin-top 25px
+        
+     .btn
+        width auto
+        display table
+        margin auto
 
 
 
