--- a/app/pages/page1.pug
+++ b/app/pages/page1.pug
@@ -783,12 +783,14 @@ block content
                     .container
                         +e.title Рассчитать стоимость
                         .row
-                            .col.col_size_12.col_size-sm_6
-                                img(src="images/b1.png")
-                            .col.col_size_12.col_size-sm_6
-                                img(src="images/b2.png")
-                        .btn(data-quiz="modal__quiz1").run-quiz.btn_view_action
-                            .btn__text ОПРОС
+                            .col.col_size-sm_6.col_offset-sm_3
+                                 blockquote Значимость этих проблем настолько очевидна, что сложившаяся структура организации играет важную роль в формировании систем массового участия. 
+                        
+                        .row
+                            .col.col_size-sm_10.col_offset-sm_1
+                                img(src="images/b1.png" style="position: relative;z-index: 100;")
+                                .btn(data-quiz="modal__quiz1" style="margin-top: -24px; padding: 30px 35px;").run-quiz.btn_view_action
+                                    .btn__text Пройти опрос!
 
 
                         
