--- a/app/pages/page1.pug
+++ b/app/pages/page1.pug
@@ -596,6 +596,51 @@ block content
                                 //-     b Если Вы хотите получить детальный бизнес-процесс подключения к сетям водоснабжения и/или водоотведения, разработанный компанией ООО “БК Инвент”, вы можете его получить на электронную почту.
                                 //- p Мы вышлем Вам на почту процесс, который происходит изнутри, для того, чтобы получить вышеперечисленные результаты!
                         hr
+
+
+
+
+
+
+                    +b.share
+                        .row
+                            .col.col_size_3
+                                +e.title Акция 
+                                +e.text
+                                    |ча организации, в особенности же укрепление и развитие структуры играет важную роль в формировании новых предложений. Таким образом начало повседневной работы по формированию позиции требуют от нас анализа 
+                            .col.col_size_5
+                                +e.img
+                                    img(src="https://avatars.mds.yandex.net/get-pdb/398891/87f36bd1-6125-49cb-b6b8-ce15230e7f6e/orig")
+                            .col.col_size_4
+                                form.form.ajax
+                                    +e.form-title Заполните контактную информацию
+                                    .input.input_type_name
+                                        .input__box
+                                            .input__top-border
+                                            .input__title Имя
+                                            //- .input__icon
+                                            input(name='name').input__control
+                                        .input__message(data-default='Укажите точно как в паспорте')
+
+                                    .input.input_type_phone
+                                        .input__box
+                                            .input__top-border
+                                            .input__title Телефон
+                                            //- .input__icon
+                                            input(name='phone').input__control
+                                        .input__message(data-default='Укажите номер телефона. Убедитесь, что телефон введен корректно                                   ') 
+        
+                                    //- .input.input_type_email
+                                    //-     .input__box
+                                    //-         .input__top-border
+                                    //-         .input__title Email
+                                    //-         //- .input__icon
+                                    //-         input(name='email').input__control
+                                    //-     .input__message                               
+
+                                    button(type="submit").btn.btn_view_action
+                                            .btn__text Записаться на консультацию
+
                     +b.stock.stock_type_slider
                         +e.wrapper
                             .cases__next
