--- a/app/styles/app.styl
+++ b/app/styles/app.styl
@@ -3148,3 +3148,44 @@ img.zoom
         background-position 0 0
     to
         background-position 40px 40px
+        
+
+.share
+    margin-bottom 40px
+    border-radius 4px
+    background-image linear-gradient( 107deg, rgba(214,227,254,.3) 0%, rgba(201,199,199,.3) 78%, rgba(213,213,213,.3) 100%)
+    form
+        margin 15px
+        background #fff
+        padding 20px
+        border-radius 4px
+        box-shadow 0 6px 20px 0px #d0d0d0
+    &__title
+        font-size 20px
+        line-height 1.2em
+        color #000
+        padding 20px 20px 10px 20px 
+    &__text
+        font-size 14px
+        line-height 1.4em
+        padding 0 20px 20px 20px 
+        span
+            display block
+            font-size 15px
+            font-weight 600
+            margin-bottom 5px
+            margin-top 20px
+    &__form-title
+        font-size 18px
+        margin-bottom 15px
+        text-align center
+        font-weight 600
+    &__img
+        position relative
+        line-height 0
+        img
+            border-radius 0
+            margin 0
+            height 100%
+        @media (min-width 900px)
+            width auto
