--- a/app/pages/page1.pug
+++ b/app/pages/page1.pug
@@ -510,7 +510,7 @@ block content
                         +b.deadlines
                             +b.title
                                 +e.wrap 
-                                    +e.text Этапы подключения
+                                    +e.text Этапы подключения 
                             +e.wrapper
                                 +e.item
                                     +e.stage
@@ -1336,6 +1336,13 @@ block content
                             |Далее 
                             .arrow.arrow_theme_light.arrow_right
 
+
+    .modal#modal__ok
+        .modal__wrapper
+            .modal__dialog
+                .close.modal__close
+                .modal__title ----
+                
                 
     .modal#modal__order
         .modal__wrapper
