--- a/app/pages/page1.pug
+++ b/app/pages/page1.pug
@@ -604,14 +604,14 @@ block content
 
                     +b.share
                         .row
-                            .col.col_size_3
+                            .col.col_size_12.col_size-md_3.col_size-lg_3
                                 +e.title Акция 
                                 +e.text
                                     |ча организации, в особенности же укрепление и развитие структуры играет важную роль в формировании новых предложений. Таким образом начало повседневной работы по формированию позиции требуют от нас анализа 
-                            .col.col_size_5
+                            .col.col_size_12.col_size-md_4.col_size-lg_5
                                 +e.img
                                     img(src="https://avatars.mds.yandex.net/get-pdb/398891/87f36bd1-6125-49cb-b6b8-ce15230e7f6e/orig")
-                            .col.col_size_4
+                            .col.col_size_12.col_size-md_5.col_size-lg_4
                                 form.form.ajax
                                     +e.form-title Заполните контактную информацию
                                     .input.input_type_name
